# ds_twitter_elt

./: .env.example  .gitignore  README.md  pyproject.toml
airflow/dags/: twitter_dag.py
airflow/hook/: twitter_hook.py
airflow/operators/: twitter_operator.py
notebooks/: data_exploration.ipynb  silver_exploration.ipynb
scripts/: connections.sh
spark/: insight_tweet.py  transformation.py
